--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,7 +3,7 @@ name: Sandbox
 on:
   push:
     tags:
-    - "v*"
+    - '*'
 
 jobs:
   test:
@@ -18,6 +18,6 @@ jobs:
         echo TEST2
         echo BASE_BRANCH=$(true) >> $GITHUB_ENV  # TODO: set branch based on tag trigger event parent branch
         echo TEST3
-    - name: Print base branch
+    - name: Display base branch
       run: |
         echo $BASE_BRANCH
