--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,8 +11,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        fetch-tags: true
         ref: tags/${{ github.ref_name }}
+        fetch-depth: 1
+        fetch-tags: true
     - name: Determine base branch
       run: |
         echo TEST1
