--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,26 +4,29 @@ on:
   push:
     tags:
 
+env:
+  DEFAULT_BRANCH: master
+
 jobs:
   test:
     if: github.ref_type == 'tag'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-        fetch-tags: true
-        ref: ${{ github.ref_name }}
     - name: Determine base branch
       run: |
-        echo TEST1
-        git branch --contains ${{ github.ref_name }}
-        echo TEST2
-        git branch --contains tags/${{ github.ref_name }}
-        echo TEST3
-        git log -1 --pretty='%D' ${{ github.ref_name }}
-        echo TEST4
-        echo BASE_BRANCH=$(true) >> $GITHUB_ENV  # TODO: set branch based on tag trigger event parent branch
+        if echo ${{ github.ref_name }} | grep beta; then
+          echo BASE_BRANCH1=$DEFAULT_BRANCH | tee -a $GITHUB_ENV
+        else
+          echo BASE_BRANCH1=${{ github.ref_name }} | tee -a $GITHUB_ENV
+        fi
+        # or:
+        echo BASE_BRANCH2=${{ contains(github.ref_name, 'beta') && env.DEFAULT_BRANCH || github.ref_name }} | tee -a $GITHUB_ENV
     - name: Display base branch
       run: |
-        echo $BASE_BRANCH
+        echo DEBUG
+        echo $BASE_BRANCH1
+        echo DEBUG
+        echo $BASE_BRANCH2
+        echo DEBUG
+
