--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,25 +2,14 @@ name: Sandbox
 
 on:
   push:
+    branches:
     tags:
 
-env:
-  DEFAULT_BRANCH: master
-
 jobs:
-  test:
-    if: github.ref_type == 'tag'
+  sandbox:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
     - run: |
-        echo DOCKER_TAG1=asdfasdf777          >> $GITHUB_ENV
-        echo DOCKER_TAG2=foo-bar-1.2.3        >> $GITHUB_ENV
-        echo DOCKER_TAG3=foo-bar-4.5.6-beta.9 >> $GITHUB_ENV
-    - run: |
-        echo test 1
-        echo resulting value is ${{ contains(env.DOCKER_TAG1, 'beta') && 'main' || env.DOCKER_TAG1 }}
-        echo test 2
-        echo resulting value is ${{ contains(env.DOCKER_TAG2, 'beta') && 'main' || env.DOCKER_TAG2 }}
-        echo test 3
-        echo resulting value is ${{ contains(env.DOCKER_TAG3, 'beta') && 'main' || env.DOCKER_TAG3 }}
+        which yq
+        yq --version
+        yq --help
