--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,15 +13,9 @@ env:
 
 jobs:
   sandbox:
+    if: ${{ startsWith(github.event.head_commit.message, 'foo:') }}
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Determine base branch
-      run: |
-        if [[ "${{ github.ref_type }}" == "branch" || "${{ github.ref_name }}" == *"beta"* ]]; then  # branch commits and beta tags update values on network-operator's *master* branch
-          echo BASE_BRANCH=master | tee -a $GITHUB_ENV
-        else  # GA and `-rc.` tags update values on network-operator's respective *release* branches
-          release_branch=$(echo ${{ github.ref_name }} | sed -E 's/^network-operator-([0-9]+\.[0-9]+).+/v\1.x/')  # example: transforms "network-operator-25.1.0-beta.2" to "v25.1.x"
-          echo BASE_BRANCH=$release_branch | tee -a $GITHUB_ENV
-        fi
-
+    # - uses: actions/checkout@v4
+    - run: |
+        echo yay
