--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   sandbox:
-    if: ${{ startsWith(github.event.head_commit.message, 'foo:') }}
+    if: startsWith(github.event.head_commit.message, 'bar:')
     runs-on: ubuntu-latest
     steps:
     # - uses: actions/checkout@v4
