--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,7 @@ on:
   push:
 
 jobs:
-  sandbox:
+  sandbox1:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -16,3 +16,11 @@ jobs:
     outputs:
       date: ${{ steps.foo.outputs.d }}
       user: ${{ steps.foo.outputs.u }}
+
+  sandbox2:
+    needs: sandbox1
+    runs-on: ubuntu-latest
+    steps:
+    - run: |
+        echo ${{ needs.sandbox1.outputs.date }}
+        echo ${{ needs.sandbox1.outputs.user }}
